# parcel

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yaml  rust.yaml
src/: http.rs  main.rs  smtp.rs
