[package]
name = "parcel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["http2", "json"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = { version = "0.7.2", features = ["tls-rustls", "tokio-rustls"] }
base64ct = { version = "1.8.0", features = ["std", "alloc"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
email_address = { version = "0.2.9", features = ["serde_support"] }
hickory-resolver = { version = "0.25.2", features = ["__tls", "tls-ring"] }
hmac = "0.12.1"
mail-auth = "0.7.1"
mail-parser = "0.11.1"
mail-send = "0.5.1"
psl = "2.1.140"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26.2", features = ["ring"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
